# aobx

./: CMakeLists.txt
dev/: CMakeLists.txt  main.cpp
include/aobx/: audiobox.hpp  cache.hpp  channel.hpp  cst_math.hpp  cst_wave_table.hpp  engine.hpp  math.hpp  multi_channel.hpp  multi_channel_buffer.hpp  obj_traits.hpp  one_pole_filter.hpp  phasor.hpp  sine.hpp  snd_file.hpp  snd_player.hpp  tuple_utils.hpp  value.hpp
source/: audiobox.cpp
